tryed do add quality btn to plyer

--- a/angular.json
+++ b/angular.json
@@ -20,19 +20,18 @@
             "outputPath": "dist/videovlix",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "https://vjs.zencdn.net/8.16.1/video-js.css",
+              "https://unpkg.com/@videojs/themes@1/dist/city/index.css"
             ],
             "scripts": [
+              "https://vjs.zencdn.net/8.16.1/video.min.js",
+              "https://cdn.jsdelivr.net/npm/videojs-hls-quality-selector@latest/dist/videojs-hls-quality-selector.min.js"
             ]
           },
           "configurations": {
@@ -80,20 +79,18 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "https://vjs.zencdn.net/8.16.1/video-js.css",
+              "https://unpkg.com/@videojs/themes@1/dist/city/index.css"
             ],
             "scripts": [
+              "https://vjs.zencdn.net/8.16.1/video.min.js",
+              "https://cdn.jsdelivr.net/npm/videojs-hls-quality-selector@latest/dist/videojs-hls-quality-selector.min.js"
             ]
           }
         }
