--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "hls.js": "^1.5.14",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "video.js": "^8.17.3",
+    "videojs-hls-quality-selector": "^2.0.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
@@ -29,6 +31,7 @@
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^22.4.1",
+    "@types/video.js": "^7.3.58",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
