--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "hls.js": "^1.5.14",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "video.js": "^8.17.3",
     "videojs-hls-quality-selector": "^2.0.0",
     "zone.js": "~0.14.3"
   },
@@ -38,6 +37,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.2"
+    "typescript": "~5.4.2",
+    "video.js": "^8.17.3"
   }
 }
