--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@types/videojs-hls-quality-selector": "^1.1.3",
     "hls.js": "^1.5.14",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "video.js": "^8.17.3",
     "videojs-hls-quality-selector": "^2.0.0",
     "videojs-http-source-selector": "^1.1.6",
     "zone.js": "~0.14.3"
@@ -38,7 +40,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.2",
-    "video.js": "^8.17.3"
+    "typescript": "~5.4.2"
   }
 }
